<resources>
    <string name="app_name">MyLittleYandexWeather</string>
    <string name="loading_text">Скачиваем весь интерент.\nПридется немного подождать</string>
    <string name="try_fix">Попытка все исправить</string>
    <string name="something_went_wrong">Что то пошло не так</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="search">Поиск</string>
    <string name="empty_list">Ничего не найдено</string>
    <string name="delete">Удалить</string>
</resources>
