<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.lekveishvili.mylittleyandexweather.fragments.main.MainFragmentViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Тулбар можно было реализовать и обычными средставми, но для разнообразия
            решил сделать так-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical|end">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@{viewModel.title}"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="@string/app_name" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:onClick="@{()->viewModel.router.openSearch()}"
                    android:padding="8dp"
                    android:src="@drawable/ic_search_white_24dp" />

            </LinearLayout>

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swiperefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:onRefreshListener="@{() -> viewModel.loadData()}"
                app:refreshing="@{viewModel.isLoading}">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:itemBinding="@{viewModel.itemBinding}"
                    app:items="@{viewModel.items}"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
            </android.support.v4.widget.SwipeRefreshLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{viewModel.loading}"
            tools:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/loading_text" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grayLight"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{viewModel.error}"
            tools:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/something_went_wrong" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{()->viewModel.loadData()}"
                android:padding="8dp"
                android:text="@string/try_fix"
                android:textAllCaps="true"
                android:textSize="14dp" />
        </LinearLayout>
    </FrameLayout>
</layout>